# powerline

./: .env.example  .gitignore  Caddyfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users.py  002_create_campaigns_targets.py  003_create_phone_numbers.py  004_create_call_sessions_calls.py  005_audio_blocklist_rate_limit.py
backend/app/: celery_app.py  cli.py  config.py  dependencies.py  main.py  redis_client.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  analytics.py  audio.py  auth.py  calls.py  campaigns.py  health.py  helpers.py  phone_numbers.py  tokens.py  users.py  webhooks.py
backend/app/defaults/: audio.yml
backend/app/models/: __init__.py  audio.py  blocklist.py  call.py  call_session.py  campaign.py  campaign_phone_number.py  campaign_target.py  phone_number.py  target.py  user.py
backend/app/schemas/: admin.py  analytics.py  audio.py  auth.py  calls.py  campaign.py  phone_number.py  target.py  tokens.py  user.py
backend/app/services/: audio_service.py  auth.py  call_state.py  rate_limiter.py  sms.py
backend/app/services/telephony/: __init__.py  base.py  lookup_service.py  twilio_provider.py  twiml.py
backend/app/tasks/: __init__.py  insights.py
backend/tests/: conftest.py  test_auth.py  test_calls.py  test_campaigns.py  test_health.py
embed/: package-lock.json  package.json  test.html  tsconfig.json  vite.config.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+36 files in other folders)
